[package]
name = "async-github"
publish = false
authors.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
exclude.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre = "0.6.4"
crossterm = { workspace = true, features = ["event-stream"] }
octocrab = "0.44.0"
ratatui.workspace = true
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
