[package]
name = "calendar-explorer"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }

[lints]
workspace = true
