[package]
name = "demo"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["console"]
console = ["ratatui/console", "dep:console"]
crossterm = ["ratatui/crossterm", "dep:crossterm"]
termion = ["ratatui/termion", "dep:termion"]
termwiz = ["ratatui/termwiz", "dep:termwiz"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
console = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
rand = "0.9.1"
ratatui.workspace = true
termwiz = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
termion = { workspace = true, optional = true }
