[package]
name = "demo"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["crossterm"]
crossterm = ["ratatui/crossterm", "dep:crossterm"]
termion = ["ratatui/termion", "dep:termion"]
termwiz = ["ratatui/termwiz", "dep:termwiz"]

[dependencies]
clap.workspace = true
crossterm = { workspace = true, optional = true }
rand.workspace = true
ratatui.workspace = true
termwiz = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
termion = { workspace = true, optional = true }
