[package]
name = "demo"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]
termion = ["dep:termion", "ratatui/termion"]
termwiz = ["dep:termwiz", "ratatui/termwiz"]

[dependencies]
clap.workspace = true
crossterm = { workspace = true, optional = true }
rand.workspace = true
ratatui.workspace = true
termwiz = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
termion = { workspace = true, optional = true }
