[package]
name = "demo2"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre = "0.6.4"
crossterm.workspace = true
indoc.workspace = true
itertools.workspace = true
palette = "0.7.6"
rand = "0.9.1"
rand_chacha = "0.9.0"
ratatui = { workspace = true, features = ["all-widgets"] }
strum.workspace = true
time = "0.3.39"
unicode-width = "0.2.0"
