[package]
name = "table"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
fakeit = "1.1"
itertools.workspace = true
ratatui.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
