[package]
name = "volatility-surface"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre.workspace = true
colorgrad = { version = "0.8", features = ["preset"] }
crossterm.workspace = true
rand.workspace = true
ratatui.workspace = true

[lints]
workspace = true
